--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,33 +1,27 @@
 <section>
   <h2>Sign In</h2>
   <% if (message) { %>
-  <p><%= message %></p>
+    <p><%= message %></p>
   <% } %>
+
   <form action="/user/signin" method="post">
     <input type="email" name="email" placeholder="Email" required /><br /><br />
-    <input
-      type="password"
-      name="password"
-      placeholder="Password"
-      required
-    /><br /><br />
-    <div
-      class="g-recaptcha"
-      data-sitekey="6LflLRIqAAAAAHrbmeUx3WThRxp7On8iAQQOIQWH"
-    ></div>
-    <button
-      type="submit"
-      class="btn btn-light"
-    >
-      Sign In
-    </button>
+    <input type="password" name="password" placeholder="Password" required /><br /><br />
+
+    <!-- Google reCAPTCHA -->
+    <div class="g-recaptcha" data-sitekey="<%= RECAPTCHA_SITE_KEY %>"></div>
+
+    <button type="submit" class="btn btn-light">Sign In</button>
   </form>
   <br />
-  <!-- Sign-in Google Auth -->
-  <a href="/auth/google"><strong>Sign In with Google</strong></a> &nbsp&nbsp
 
-  <!-- Link to forgot password page -->
-  <a href="/user/forgot-password"><strong>Forgot Password?</strong></a><br>
-  
-  <p><strong>Don't have an account?</strong> &nbsp; <a href="/user/signup"><strong>Sign up</strong></a></p>
+  <a href="/auth/google"><strong>Sign In with Google</strong></a> &nbsp;&nbsp;
+  <a href="/user/forgot-password"><strong>Forgot Password?</strong></a><br />
+
+  <p><strong>Don't have an account?</strong> &nbsp;
+    <a href="/user/signup"><strong>Sign up</strong></a>
+  </p>
 </section>
+
+<!-- Script Google reCAPTCHA -->
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
