--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,24 +1,36 @@
 <section>
   <h2>Sign In</h2>
+
   <% if (message) { %>
-    <p><%= message %></p>
+    <p style="color: red;"><%= message %></p>
   <% } %>
 
+  <!-- Form Sign In bình thường -->
   <form action="/user/signin" method="post">
     <input type="email" name="email" placeholder="Email" required /><br /><br />
     <input type="password" name="password" placeholder="Password" required /><br /><br />
 
     <!-- Google reCAPTCHA -->
-    <div class="g-recaptcha" data-sitekey="<%= RECAPTCHA_SITE_KEY %>"></div>
+    <div class="g-recaptcha" data-sitekey="<%= siteKey %>"></div>
 
     <button type="submit" class="btn btn-light">Sign In</button>
   </form>
-  <br />
 
-  <a href="/auth/google"><strong>Sign In with Google</strong></a> &nbsp;&nbsp;
+  <hr />
+
+  <!-- Sign in with Google -->
+  <a href="/auth/google" class="btn btn-danger">
+    <strong>Sign In with Google</strong>
+  </a>
+
+  <br /><br />
+
+  <!-- Forgot password -->
   <a href="/user/forgot-password"><strong>Forgot Password?</strong></a><br />
 
-  <p><strong>Don't have an account?</strong> &nbsp;
+  <!-- Sign up -->
+  <p>
+    <strong>Don't have an account?</strong>
     <a href="/user/signup"><strong>Sign up</strong></a>
   </p>
 </section>
